Update primary color in main stylesheet

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,7 +11,7 @@ $background-color: #161821;
 $text-color: #a7b0d2;
 $link-color: #c1c2e2;
 
-$primary-color: #6892ca;
+$primary-color: #89b8c2;
 
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
