Update text color and selection background in main.scss for improved readability

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,7 @@
 
 
 $background-color: #161821;
-$text-color: #a7b0d2;
+$text-color: #c6c8d1;
 $link-color: #89b8c2;
 
 $primary-color: #89b8c2;
@@ -23,13 +23,13 @@ $global-font-family: $sans-serif;
 
 
 ::selection {
-  background: #a7b0d2;
+  background: #c6c8d1;
   color: #161821;
 }
 
 // Code Blocks
 .highlight {
-  border: 1px solid #a7b0d2;
+  border: 1px solid #c6c8d1;
   border-radius: 5px;;
 }
 
