Add Google Search Console verification meta tag to custom.html

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,10 +8,12 @@
   gtag('config', 'G-YLX6ZGW4FB');
 </script>
 
-
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <!-- Noto Sans JP -->
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
 <!-- JetBrains Mono -->
 <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+
+<!-- Google Search Console Verification -->
+<meta name="google-site-verification" content="rZwkpF-hA5sBgubvMqMDiCzl-Dx6mWpKp6H2kYcqJmA" />
